<resources>
    <string name="app_name">Carrot</string>
    <!--profile-->
    <string name="profile_tile">먼저 알바 프로필을\n만들어 주세요</string>
    <string name="profile_subTitle">원하는 알바에 언제든 지원 할 수 있어요.</string>
    <string name="profile_name">이름</string>
    <string name="profile_noPrimary">(선택)</string>
    <string name="profile_nameHint">당근이</string>
    <string name="profile_number">연락처</string>
    <string name="profile_numberDetail">전화번호는 안심번호로 표시돼요.</string>
    <string name="profile_numberHint">01012345678</string>
    <string name="profile_gender">성별</string>
    <string name="profile_man">남자</string>
    <string name="profile_woman">여자</string>
    <string name="profile_birth">태어난 연도</string>
    <string name="profile_brithDetail">태어난 연도를 숫자 4자리로 입력해주세요. 알바 프로필에는 나이대로 표시돼요. 예) 30대, 40대 등 </string>
    <string name="profile_birthHint">2023</string>
    <string name="profile_carrier">경력</string>
    <string name="profile_careerRegister">경력/경험 등록</string>
    <string name="profile_introduction">자기소개</string>
    <string name="profile_introductionHint">본인이 일햇던 경험과 할 수 있는 업무에 대해 소개해주세요.</string>
    <string name="profile_agreePrivacy1">(필수) 개인정보 수집 및 이용 동의 </string>
    <string name="profile_agreePrivacy2">(필수) 개인정보 제 3자 제공 동의</string>
    <string name="profile_agreeAndApply">동의하고 지원하기</string>
    <!--review-->
    <string name="review_review">후기</string>
    <string name="review_actualWork">실제근무</string>
    <string name="review_certification">인계동 인증 29 회 · 2개월 전</string>
    <string name="review_partTime">알바</string>
    <string name="review_partTimeComment">[알바급구] 인계동 단기 오늘!! 금(10) 홀</string>
    <string name="review_dummyName">착한 당근이</string>
    <string name="review_dummyComment">바쁘지만 시간이 금방 가고 좋아요!!</string>
    <string name="review_noReview">아직 작성된 후기가 없습니다!</string>
    <!--detail-->
    <string name="sample2">sample2</string>
    <!--home-->
    <string name="sample3">sample3</string>
    <string name="home_tool_bar_title">당근알바</string>
    <string name="home_title">내 주변 사장님이\n교북동 빠릿님을 찾고 있어요!</string>
    <string name="home_filter_place">교복동 외 234</string>
    <string name="home_filter_period">단기</string>
    <string name="home_filter_work">하는 일</string>
    <string name="home_filter_day">요일</string>
    <string name="home_notification_1">원하는 알바를 알림으로 받아보세요</string>
    <string name="home_notification_2">알림설정</string>
    <string name="home_today_popularity">오늘의 인기 알바</string>
    <string name="item_home_full_job_title">데이즈호텔 프론트</string>
    <string name="item_home_full_job_detail">데이즈호텔명동 · 충무로1가 · 광고</string>
    <string name="item_home_full_job_numbers_of_reviews">후기1</string>
    <string name="item_home_full_job_review_tag_1">연락을 잘해줘요</string>
    <string name="item_home_full_job_review_tag_2">걸어서 10분</string>
    <string name="item_home_full_job_period">월~일 | 18:00~ 00:30 협의</string>
    <string name="item_home_full_job_salary">시급 10,000원</string>
    <string name="item_home_recommended_job_title">리앙크리스피롤 수원AK점</string>
    <string name="item_home_recommended_job_detail">리앙크리스피롤 수원AK점</string>
    <string name="item_home_recommended_job_salary">월급 201만원</string>
    <string name="item_home_today_popularity_job_title">1위 카페운영및관리.광고홍보.멀티되...</string>
    <string name="item_home_today_popularity_job_detail">오랑제뜨21\t\t연남동</string>
    <string name="item_home_today_popularity_job_interest">관심 2</string>
    <string name="item_home_today_popularity_job_check">조회 132</string>
    <string name="item_home_today_popularity_job_salary">10,000원</string>

    <!-- popup -->
    <string name="home_popup_mainText">알바가 지원되었습니다!</string>
    <string name="home_popup_subText">자세한 정보는\n마이페이지에서 확인하세요!</string>
    <string name="home_popup_check">확인</string>
    <string name="profile_popup_mainText">지금 나가시면\n작성하신 정보가 삭제됩니다.</string>
    <string name="profile_popup_subText">나가시면 작성하신 정보가\n삭제됩니다. 그래도 나가시겠습니까?</string>
    <string name="profile_popup_cancel">취소</string>
    <string name="profile_popup_exit">나가기</string>


</resources>