<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="160dp"
    android:layout_marginHorizontal="6dp"
    android:layout_marginVertical="4dp"
    android:background="@drawable/rectangle_gray7_radius_8"
    android:backgroundTint="@color/white"
    android:clipToOutline="true"
    android:elevation="4dp">


    <TextView
        android:id="@+id/tv_item_home_today_popularity_job_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:textAppearance="@style/TextAppearance.Carrot.sub_title_bold"
        android:textColor="@color/color_sub_gray1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/item_home_today_popularity_job_title" />


    <TextView
        android:id="@+id/tv_item_home_today_popularity_job_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="2dp"
        android:textAppearance="@style/TextAppearance.Carrot.sub_title_3_medium_11"
        android:textColor="@color/color_sub_gray3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_home_today_popularity_job_title"
        tools:text="@string/item_home_today_popularity_job_detail" />

    <TextView
        android:id="@+id/tv_item_home_today_popularity_job_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:textAppearance="@style/TextAppearance.Carrot.sub_title_2_medium_10"
        android:textColor="@color/color_sub_gray3"
        app:layout_constraintBottom_toTopOf="@id/tv_item_home_today_popularity_job_check"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/item_home_today_popularity_job_interest" />


    <TextView
        android:id="@+id/tv_item_home_today_popularity_job_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="12dp"
        android:textAppearance="@style/TextAppearance.Carrot.sub_title_2_medium_10"
        android:textColor="@color/color_sub_gray3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/item_home_today_popularity_job_check"

        />

    <TextView
        android:id="@+id/tv_item_home_today_popularity_job_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="14dp"
        android:textAppearance="@style/TextAppearance.Carrot.sub_title_bold"
        android:textColor="@color/color_main1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_item_home_today_popularity_job_check"
        tools:text="@string/item_home_today_popularity_job_salary" />


</androidx.constraintlayout.widget.ConstraintLayout>