<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <View
        android:id="@+id/view_item_home_full_job_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/color_sub_gray6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_item_home_full_job_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="55dp"
        android:textAppearance="@style/TextAppearance.Carrot.sub_title_bold"
        android:textColor="@color/color_sub_gray1"
        app:layout_constraintEnd_toStartOf="@id/iv_item_home_full_job_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_item_home_full_job_line"
        tools:text="@string/item_home_full_job_title" />

    <TextView
        android:id="@+id/tv_item_home_full_job_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="3dp"
        android:drawableEnd="@drawable/ic_info"
        android:drawablePadding="7dp"
        android:text="@string/item_home_full_job_detail"
        android:textAppearance="@style/TextAppearance.Carrot.body_medium_11"
        android:textColor="@color/color_sub_gray3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_home_full_job_title" />

    <TextView
        android:id="@+id/tv_item_home_full_job_numbers_of_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/item_home_full_job_numbers_of_reviews"
        android:textAppearance="@style/TextAppearance.Carrot.sub_title_bold_12"
        android:textColor="@color/color_main1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_home_full_job_detail" />


    <TextView
        android:id="@+id/tv_item_home_full_job_review_tag_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/rectangle_gray7_radius_4"
        android:paddingHorizontal="8dp"
        android:paddingVertical="3dp"
        android:text="@string/item_home_full_job_review_tag_1"
        android:textAppearance="@style/TextAppearance.Carrot.body_medium_11"
        android:textColor="@color/color_sub_gray2"
        app:layout_constraintStart_toEndOf="@id/tv_item_home_full_job_numbers_of_reviews"
        app:layout_constraintTop_toBottomOf="@id/tv_item_home_full_job_detail" />

    <TextView
        android:id="@+id/tv_item_home_full_job_review_tag_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/rectangle_gray7_radius_4"
        android:backgroundTint="@color/color_sub_blue2"
        android:paddingHorizontal="8dp"
        android:paddingVertical="3dp"
        android:text="@string/item_home_full_job_review_tag_2"
        android:textAppearance="@style/TextAppearance.Carrot.body_medium_11"
        android:textColor="@color/color_sub_blue1"
        app:layout_constraintStart_toEndOf="@id/tv_item_home_full_job_review_tag_1"
        app:layout_constraintTop_toTopOf="@id/tv_item_home_full_job_review_tag_1" />

    <TextView
        android:id="@+id/tv_item_home_full_job_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/item_home_full_job_period"
        android:textAppearance="@style/TextAppearance.Carrot.body_medium_14"
        android:textColor="@color/color_sub_gray4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_home_full_job_numbers_of_reviews" />


    <ImageView
        android:id="@+id/iv_item_home_full_job_img"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/rectangle_gray7_radius_6"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/tv_item_home_full_job_salary"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_item_home_full_job_line"
        tools:srcCompat="@tools:sample/avatars" />


    <TextView
        android:id="@+id/tv_item_home_full_job_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.Carrot.sub_title_bold"
        android:textColor="@color/color_main1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_item_home_full_job_img"
        tools:text="@string/item_home_full_job_salary" />


</androidx.constraintlayout.widget.ConstraintLayout>