<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_white_radius_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_profilePopup"
            android:layout_width="24dp"
            android:layout_height="31dp"
            android:layout_marginTop="21dp"
            android:src="@drawable/ic_hand_good"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_profilePopup_mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/notosans_bold"
            android:gravity="center"
            android:text="@string/profile_popup_mainText"
            android:textColor="@color/color_sub_gray1"
            android:textFontWeight="700"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profilePopup" />

        <TextView
            android:id="@+id/tv_profilePopup_subText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/notosans_medium"
            android:gravity="center"
            android:text="@string/profile_popup_subText"
            android:textColor="@color/color_sub_gray1"
            android:textFontWeight="500"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profilePopup_mainText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_profilePopup_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/radius_gray7_radius_6"
            android:fontFamily="@font/notosans_bold"
            android:text="@string/profile_popup_cancel"
            android:textColor="@color/color_sub_gray4"
            android:textFontWeight="600"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_profilePopup_exit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profilePopup_subText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_profilePopup_exit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/notosans_bold"
            android:layout_marginStart="6dp"
            android:textColor="@color/white"
            android:layout_marginEnd="27dp"
            android:textFontWeight="600"
            android:textSize="14sp"
            android:background="@drawable/radius_main1_radius_6"
            android:text="@string/profile_popup_exit"
            app:layout_constraintBottom_toBottomOf="@id/btn_profilePopup_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_profilePopup_cancel"
            app:layout_constraintTop_toTopOf="@id/btn_profilePopup_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
